--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+      sdk: flutter
 
+  intl: any
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.2.1
@@ -19,7 +22,8 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   cached_network_image: ^3.4.0
   shimmer: ^3.0.0
-  flutter_riverpod: any
+  flutter_riverpod: ^2.6.1
+  carousel_slider: any
 
 dev_dependencies:
   flutter_test:
@@ -29,11 +33,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # example:
   # fonts:
