1. Product details screen 2. Checkout screen 3. Clean architecture

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,9 @@ dependencies:
   cached_network_image: ^3.4.0
   shimmer: ^3.0.0
   flutter_riverpod: ^2.6.1
-  carousel_slider: any
+  carousel_slider: ^5.0.0
+  hive: any
+  hive_flutter: any
 
 dev_dependencies:
   flutter_test:
