--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,14 +18,13 @@ dependencies:
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.2.1
   dio: ^5.8.0+1
-  rxdart: ^0.28.0
   infinite_scroll_pagination: ^4.0.0
   cached_network_image: ^3.4.0
   shimmer: ^3.0.0
   flutter_riverpod: ^2.6.1
   carousel_slider: ^5.0.0
-  hive: any
-  hive_flutter: any
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
