--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires access to your photos to update your profile picture.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app requires access to your camer to update your profile picture.</string>
 </dict>
 </plist>
