--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   carousel_slider: ^5.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  image_picker: ^1.1.2
+  image_cropper: ^9.1.0
 
 dev_dependencies:
   flutter_test:
