--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   hive_flutter: ^1.1.0
   image_picker: ^1.1.2
   image_cropper: ^9.1.0
+  country_code_picker: ^3.3.0
 
 dev_dependencies:
   flutter_test:
