--- a/l10n.yaml
+++ b/l10n.yaml
@@ -3,3 +3,4 @@ template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
 synthetic-package: false
 output-dir: lib/src/generated/l10n
+untranslated-messages-file: some_untranslated_strings.txt
