--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   image_picker: ^1.1.2
   image_cropper: ^9.1.0
   country_code_picker: ^3.3.0
+  flutter_inappwebview: ^6.1.5
 
 dev_dependencies:
   flutter_test:
