--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   country_code_picker: ^3.3.0
   flutter_inappwebview: ^6.1.5
   easy_image_viewer: ^1.5.1
+  flutter_otp_text_field: ^1.5.1
 
 dev_dependencies:
   flutter_test:
