--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_inappwebview: ^6.1.5
   easy_image_viewer: ^1.5.1
   expandable_richtext: ^1.0.7
+  package_info_plus: ^8.3.0
 
 dev_dependencies:
   flutter_test:
